# caffeine-applet

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile
assets/: caffeine-applet.desktop
flatpak/: flathub.json
i18n/en/: caffeine_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: main.rs  window.rs
